--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "sass": "sass --watch public/assets/scss/main.scss:public/assets/css/main.css"
     },
     "dependencies": {
+        "bootstrap-icons": "^1.11.3",
         "isotope-layout": "^3.0.6",
         "next": "14.0.1",
         "react": "18.2.0",
