--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "sass": "^1.69.5",
         "swiper": "^11.1.14",
         "vanilla-tilt": "^1.8.1",
-        "wowjs": "^1.1.3"
+        "wowjs": "^1.1.3",
+        "xlsx": "^0.18.5"
     }
 }
